Updating to wrangle

--- a/zillow.ipynb
+++ b/zillow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "790d2f89",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "\n",
+    "import wrangle_zillow\n",
     "from env import get_db_url"
    ]
   },
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "15f5cb9a",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "385ba67c",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1272,7 @@
        "4            5  Female   31             17              40"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "b4bdd70b",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1314,7 @@
        "[200 rows x 5 columns]>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "aef04cf5",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1348,7 @@
        "[200 rows x 5 columns]>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "db461dd4",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "<AxesSubplot:xlabel='age', ylabel='Count'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "47d21cfb",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1402,7 @@
        "<AxesSubplot:xlabel='annual_income', ylabel='Count'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "b9d7c284",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "<AxesSubplot:xlabel='spending_score', ylabel='Count'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "a8f86f27",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1476,7 @@
        "(79.375, -1.625)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "9efc8891",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "70"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "bb2fd846",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1532,7 @@
        "(132.75, -13.25)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "2584cea2",
    "metadata": {},
    "outputs": [],
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "091bc5c1",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1651,7 @@
        "4            5  Female   31             17              40           False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "ad4cd73b",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1672,7 @@
        "(130.375, -22.625)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "3f99b551",
    "metadata": {},
    "outputs": [
@@ -1699,7 +1699,7 @@
        "99"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "3ce196a3",
    "metadata": {},
    "outputs": [],
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "154d35ad",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1747,7 @@
        "((112, 6), (48, 6), (40, 6))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "71937ecd",
    "metadata": {},
    "outputs": [
@@ -1865,7 +1865,7 @@
        "4            0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "b1d8523f",
    "metadata": {},
    "outputs": [
@@ -1897,7 +1897,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "id": "d92cfc41",
    "metadata": {},
    "outputs": [],
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "f30d6496",
    "metadata": {},
    "outputs": [],
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "031380f1",
    "metadata": {},
    "outputs": [],
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "d64bc3d9",
    "metadata": {},
    "outputs": [
@@ -2126,7 +2126,7 @@
        "[200 rows x 6 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2137,8 +2137,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "b0096df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Working on wrangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dba8cd82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = wrangle_zillow.get_zillow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "72364c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>parcelid</th>\n",
+       "      <th>airconditioningtypeid</th>\n",
+       "      <th>architecturalstyletypeid</th>\n",
+       "      <th>basementsqft</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>buildingclasstypeid</th>\n",
+       "      <th>buildingqualitytypeid</th>\n",
+       "      <th>calculatedbathnbr</th>\n",
+       "      <th>...</th>\n",
+       "      <th>censustractandblock</th>\n",
+       "      <th>logerror</th>\n",
+       "      <th>transactiondate</th>\n",
+       "      <th>airconditioningdesc</th>\n",
+       "      <th>architecturalstyledesc</th>\n",
+       "      <th>buildingclassdesc</th>\n",
+       "      <th>heatingorsystemdesc</th>\n",
+       "      <th>propertylandusedesc</th>\n",
+       "      <th>storydesc</th>\n",
+       "      <th>typeconstructiondesc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1727539</td>\n",
+       "      <td>14297519</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.059063e+13</td>\n",
+       "      <td>0.025595</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1387261</td>\n",
+       "      <td>17052889</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.111001e+13</td>\n",
+       "      <td>0.055619</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11677</td>\n",
+       "      <td>14186244</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.059022e+13</td>\n",
+       "      <td>0.005383</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2288172</td>\n",
+       "      <td>12177905</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.037300e+13</td>\n",
+       "      <td>-0.103410</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>781532</td>\n",
+       "      <td>12095076</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.037461e+13</td>\n",
+       "      <td>-0.001011</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 68 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  parcelid  airconditioningtypeid  architecturalstyletypeid  \\\n",
+       "0  1727539  14297519                    NaN                       NaN   \n",
+       "1  1387261  17052889                    NaN                       NaN   \n",
+       "2    11677  14186244                    NaN                       NaN   \n",
+       "3  2288172  12177905                    NaN                       NaN   \n",
+       "4   781532  12095076                    1.0                       NaN   \n",
+       "\n",
+       "   basementsqft  bathroomcnt  bedroomcnt  buildingclasstypeid  \\\n",
+       "0           NaN          3.5         4.0                  NaN   \n",
+       "1           NaN          1.0         2.0                  NaN   \n",
+       "2           NaN          2.0         3.0                  NaN   \n",
+       "3           NaN          3.0         4.0                  NaN   \n",
+       "4           NaN          3.0         4.0                  NaN   \n",
+       "\n",
+       "   buildingqualitytypeid  calculatedbathnbr  ...  censustractandblock  \\\n",
+       "0                    NaN                3.5  ...         6.059063e+13   \n",
+       "1                    NaN                1.0  ...         6.111001e+13   \n",
+       "2                    NaN                2.0  ...         6.059022e+13   \n",
+       "3                    8.0                3.0  ...         6.037300e+13   \n",
+       "4                    9.0                3.0  ...         6.037461e+13   \n",
+       "\n",
+       "   logerror  transactiondate  airconditioningdesc  architecturalstyledesc  \\\n",
+       "0  0.025595       2017-01-01                  NaN                     NaN   \n",
+       "1  0.055619       2017-01-01                  NaN                     NaN   \n",
+       "2  0.005383       2017-01-01                  NaN                     NaN   \n",
+       "3 -0.103410       2017-01-01                  NaN                     NaN   \n",
+       "4 -0.001011       2017-01-01              Central                     NaN   \n",
+       "\n",
+       "   buildingclassdesc  heatingorsystemdesc        propertylandusedesc  \\\n",
+       "0                NaN                  NaN  Single Family Residential   \n",
+       "1                NaN                  NaN  Single Family Residential   \n",
+       "2                NaN                  NaN  Single Family Residential   \n",
+       "3                NaN              Central  Single Family Residential   \n",
+       "4                NaN              Central  Single Family Residential   \n",
+       "\n",
+       "   storydesc  typeconstructiondesc  \n",
+       "0        NaN                   NaN  \n",
+       "1        NaN                   NaN  \n",
+       "2        NaN                   NaN  \n",
+       "3        NaN                   NaN  \n",
+       "4        NaN                   NaN  \n",
+       "\n",
+       "[5 rows x 68 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bf53409",
    "metadata": {},
    "outputs": [],
    "source": []
