--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "885c9af6",
+   "id": "8ed2f60e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "pd.options.display.max_rows = 100\n",
     "import os\n",
     "\n",
     "import scipy.stats as stats\n",
@@ -15,19 +16,22 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "\n",
-    "\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
     "import wrangle_zillow\n",
-    "from env import get_db_url"
+    "from env import get_db_url\n",
+    "\n",
+    "# ignore warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0995b667",
+   "execution_count": 2,
+   "id": "18444f00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "04397ea2",
+   "execution_count": 3,
+   "id": "9f08dc5c",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +260,7 @@
        "[5 rows x 68 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7d678348",
+   "execution_count": 4,
+   "id": "b5491be9",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ceea01",
+   "id": "41c35f98",
    "metadata": {},
    "source": [
     "I lose barely anything and get rid of a lot of bulk, moving forward with removing nulls in columns and removing redundant columns as well. "
@@ -299,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fe0a509f",
+   "execution_count": 5,
+   "id": "7207a164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "72d3a09d",
+   "execution_count": 6,
+   "id": "9b30bbbd",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +480,7 @@
        "4           773303.0          2016.0 -0.001011  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,8 +491,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "41fbff66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bathroomcnt                     float64\n",
+       "bedroomcnt                      float64\n",
+       "calculatedfinishedsquarefeet    float64\n",
+       "county                           object\n",
+       "latitude                        float64\n",
+       "longitude                       float64\n",
+       "lotsizesquarefeet               float64\n",
+       "propertylandusetypeid           float64\n",
+       "rawcensustractandblock          float64\n",
+       "regionidcounty                  float64\n",
+       "regionidzip                     float64\n",
+       "yearbuilt                       float64\n",
+       "taxvaluedollarcnt               float64\n",
+       "assessmentyear                  float64\n",
+       "logerror                        float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "99c857c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [38505, 48132]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/6m/5f3p8xk954n_z611nvzksq440000gn/T/ipykernel_88002/2964015631.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### Split data using county for stratify\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrangle_zillow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/codeup-data-science/zillow-clustering-project/wrangle_zillow.py\u001b[0m in \u001b[0;36msplit\u001b[0;34m(df, seed)\u001b[0m\n\u001b[1;32m    135\u001b[0m     train_validate, test = train_test_split(df, test_size=0.2,\n\u001b[1;32m    136\u001b[0m                                             random_state=seed, stratify = df.county)\n\u001b[0;32m--> 137\u001b[0;31m     train, validate = train_test_split(train_validate, test_size=0.3,\n\u001b[0m\u001b[1;32m    138\u001b[0m                                        random_state=seed, stratify = df.county)\n\u001b[1;32m    139\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[0;34m(test_size, train_size, random_state, shuffle, stratify, *arrays)\u001b[0m\n\u001b[1;32m   2195\u001b[0m                      random_state=random_state)\n\u001b[1;32m   2196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2197\u001b[0;31m         \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstratify\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2199\u001b[0m     return list(chain.from_iterable((_safe_indexing(a, train),\n",
+      "\u001b[0;32m/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36msplit\u001b[0;34m(self, X, y, groups)\u001b[0m\n\u001b[1;32m   1384\u001b[0m         \u001b[0mto\u001b[0m \u001b[0man\u001b[0m \u001b[0minteger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1385\u001b[0m         \"\"\"\n\u001b[0;32m-> 1386\u001b[0;31m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroups\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindexable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroups\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1387\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iter_indices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroups\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1388\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mindexable\u001b[0;34m(*iterables)\u001b[0m\n\u001b[1;32m    354\u001b[0m     \"\"\"\n\u001b[1;32m    355\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0m_make_indexable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mX\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterables\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 356\u001b[0;31m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    357\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    358\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/homebrew/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    317\u001b[0m     \u001b[0muniques\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 319\u001b[0;31m         raise ValueError(\"Found input variables with inconsistent numbers of\"\n\u001b[0m\u001b[1;32m    320\u001b[0m                          \" samples: %r\" % [int(l) for l in lengths])\n\u001b[1;32m    321\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [38505, 48132]"
+     ]
+    }
+   ],
+   "source": [
+    "### Split data using county for stratify \n",
+    "train, validate, test = wrangle_zillow.split(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5a90a3d",
+   "metadata": {},
+   "source": [
+    "Question 1\n",
+    "\n",
+    "Is there a relationship between number of baths and/or bedroom, and logerror?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9feef3",
+   "metadata": {},
+   "source": [
+    "H_0: There is no relationship between logerror and bathroom count\n",
+    "H1: There is a relationship of mean between logerror and bathroom count"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f6f6233d",
+   "id": "02120172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set alpha \n",
+    "a = .05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "464a3ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecb490f2",
    "metadata": {},
    "outputs": [],
    "source": []
